tests/invalid/invalid_int.err_exp2
invalid_int.m:019: Error: integer literal is too big
invalid_int.m:019:   `0b10000000000000000000000000000000000000000000000000000000000000000'.
invalid_int.m:024: Error: integer literal is too big
invalid_int.m:024:   `0o2000000000000000000000'.
invalid_int.m:030: Error: integer literal is too big `0x10000000000000000'.
invalid_int.m:035: Error: integer literal is too big `9223372036854775808'.
